@@ -804,7 +804,10 @@ default_kick_reason_help    The reason given to a player kicked by KICK if none 
 kick_to_help    			Kicks the specified player from the server and, if the client supports it, redirects him to a different server.
 move_to_help    			Kicks the specified player from the server and, if the client supports it, redirects him to a different server. Does not imply an autoban penalty.
 default_kick_to_reason_help The reason given to a player kicked by KICK_TO or MOVE_TO if none is specified.
-default_kick_to_server      Default server a player is redirected to by KICK_TO and MOVE_TO in ip/name:port notation.
+default_kick_to_server      Default server IP/name a player is redirected to by KICK_TO and MOVE_TO.
+default_kick_to_port        Default server port a player is redirected to by KICK_TO and MOVE_TO.
+vote_kick_to_server         Server IP/name a player is redirected to by vote kicks.
+vote_kick_to_port           Default server port a player is redirected to by vote kicks.
 
 ban_help                    Bans the specified player from the server (kicks him first) for a variable time in minutes.
 ban_ip_help                 Bans the spedified IP address from the server for a variable time.
